[package]
name = "aadsia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
draw = "^0.3"
arrayvec = "^0.7"
rand = "^0.8"
getchar = "^0.1"
egui = "^0.15"
eframe = "^0.15"

[profile.release]
debug = true
